# loczcit-iqr

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/about/: acknowledgments.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
notebooks/: data_loader.ipynb  data_loader_era5.ipynb  work_flow.ipynb
src/: main.py
src/loczcit_iqr/: __init__.py
src/loczcit_iqr/core/: __init__.py  processor.py
src/loczcit_iqr/plotting/: visualizer.py
src/loczcit_iqr/utils/: pentadas.py
