[project]
name = "loczcit-iqr"
version = "0.1.0"
description = ""
authors = [
    {name = "Elivaldo Rocha",email = "carvalhovaldo09@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "loczcit_iqr", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
blue = "^0.9.1"
isort = "^6.0.1"
taskipy = "^1.14.1"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-git-revision-date-localized-plugin = "^1.4.7"
mkdocs-redirects = "^1.2.2"
pillow = "^11.3.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.16"
mkdocstrings = "^0.30.0"
mkdocstrings-python = "^1.16.12"
pymdown-extensions = "^10.16"
pygments = "^2.19.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs build --clean && mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=loczcit_iqr -VV"
post_test = "coverage html"